# regular_expression_to_DFA

./: README.md  setup.sh  start.sh
.github/workflows/: main.yml
Compiler/: .coveragerc  .gitignore  .pylintrc  main.py  pyproject.toml  tasks.py
Compiler/src/: dfa.py  node.py  stack.py  syntax_tree.py  utils.py
Compiler/src/tests/: dfa_test.py  syntax_tree_test.py  utils_test.py
UI/: package-lock.json  package.json  playwright.config.js
UI/src/: App.css  App.jsx  index.css
UI/src/components/: BiDirectionalEdge.jsx  Dfa.jsx  DfaChart.jsx  Notification.jsx  RegexForm.jsx  SelfConnectingEdge.jsx
UI/tests/: dfa.spec.js  dfachart.spec.js  regexform.spec.js
dokumentaatio/: .gitignore  Käyttöohjeet.md  Määrittelydokumentti.md  Testausdokumentti.md  Toteutusdokumentti.md  Viikkoraportti1.md  Viikkoraportti2.md  Viikkoraportti3.md  Viikkoraportti4.md  Viikkoraportti5.md  Viikkoraportti6.md  Viikkoraportti7.md
